infra/k8s/ingress-route-frontend.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hajer-site-http
  namespace: phdstudio
spec:
  entryPoints:
    - web
  routes:
    # Exceção para o ACME challenge (Let's Encrypt)
    - match: Host(`hajir.drahaabdalla.com`) && PathPrefix(`/.well-known/acme-challenge`)
      kind: Rule
      services:
        - name: hajer-web-service
          port: 80
    # Demais requisições HTTP redirecionam para HTTPS
    - match: Host(`hajir.drahaabdalla.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: hajer-web-service
          port: 80
      middlewares:
        - name: redirect-https
          namespace: phdstudio

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hajer-site
  namespace: phdstudio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hajir.drahaabdalla.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: hajer-web-service
          port: 80
      middlewares:
        - name: security-headers
          namespace: phdstudio
        - name: compress
          namespace: phdstudio
  tls:
    certResolver: le
